titansgaming/tg-web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titansgaming-web
  namespace: titansgaming
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: titansgaming-web
