titansgaming/tg-web.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: titansgaming-web
  namespace: titansgaming
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - www.titansgaming.net
    secretName: titansgaming-web-tls
  rules:
  - host: www.titansgaming.net
    http:
      paths:
      - path: /*
        backend:
          serviceName: titansgaming-web
          servicePort: 80
